--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -26,7 +26,7 @@
   background-repeat: no-repeat
   background-position: center
 
-.BGIMG01, .BGM05
+.BGIMG01, .BGM05, .BGM10
   margin-inline: -3rem !important
   @media (max-width: $bp-max-sm)
     margin-inline: -1.5rem !important
@@ -77,13 +77,17 @@
 .BG09
   background: linear-gradient(to right, #FEEBCF 12%, #FEF7EB 12%)
 
+.BGM10
+  background: linear-gradient(to bottom, #FFF 15%, #FFF9F5, #FFF 85%)
+  
+
 .tca
   color: #FFB937
 
 .BGR05
   border-radius: 15px 0 0 0
 
-.linea-tiempo-d__item--selected .linea-tiempo-d__item__number, .acordion__accion__btn--a
+.linea-tiempo-d__item--selected .linea-tiempo-d__item__number, .acordion__accion__btn--a, .acordion__accion__btn--b
   background-color: #09614D
   color: #FFF
 
