--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -21,7 +21,7 @@
 .banner-principal__row .banner-principal__img
   width: 34%
 
-.BGIMG01, .BGIMG02, .BGIMG03, .BGIMG04, .BGIMG05, .BGIMG06
+.BGIMG01, .BGIMG02, .BGIMG03, .BGIMG04, .BGIMG05, .BGIMG06, .BGIMG07
   background-size: cover 
   background-repeat: no-repeat
   background-position: center
@@ -48,6 +48,9 @@
 
 .BGIMG06
   background-image: url("../assets/curso/fondos/img06.png")
+
+.BGIMG07
+  background-image: url("../assets/curso/fondos/img07.png")
 
 .BG01
   background-color: #FEEBCF
@@ -158,3 +161,8 @@
 
 .slyder-a__btn--atrs
   transform: rotate(180deg) !important
+
+.linea-tiempo-d__item__content__title
+  @media (max-width: $bp-max-xs)
+    height: auto
+    padding: 5px
