--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -56,6 +56,7 @@ $color-institucional: #39A900
 
 $color-primario: #FEEBCF
 $color-secundario: #FECAB2
+$color-terciario: #D1E1DD
 $color-acento-contenido: #FFCE73
 $color-acento-botones: #09614D
 $color-adicional-1: #EFEFEF
