--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -21,7 +21,7 @@
 .banner-principal__row .banner-principal__img
   width: 34%
 
-.BGIMG01, .BGIMG02, .BGIMG03, .BGIMG04, .BGIMG05, .BGIMG06, .BGIMG07
+.BGIMG01, .BGIMG02, .BGIMG03, .BGIMG04, .BGIMG05, .BGIMG06, .BGIMG07, .BGIMG08
   background-size: cover 
   background-repeat: no-repeat
   background-position: center
@@ -51,6 +51,11 @@
 
 .BGIMG07
   background-image: url("../assets/curso/fondos/img07.png")
+
+.BGIMG08
+  background-image: url("../assets/curso/fondos/img08.png")
+  &:hover
+    background-image: url("../assets/curso/fondos/img08a.png")
 
 .BG01
   background-color: #FEEBCF
